# SDL2Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Mapy/: Objects1.txt  mapa_obiektow2.txt  mapa_powierzchni1.txt  mapa_powierzchni2.txt
